Updated api information. Created Discover and booking pages.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         alt="image of mountains and lake"
       />
     </main>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
