Added header and footer partials.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style/style.css" />
     <title>Explore World</title>
   </head>
   <body>
-    <header>
+    <header></header>
+    <!-- <header>
       <div id="header">
         <h1>Explore the World</h1>
         <ul>
@@ -17,7 +17,7 @@
           <li><a href="/src/discover.html">Discover</a></li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <img
         class="hero"
@@ -25,6 +25,7 @@
         alt="image of mountains and lake"
       />
     </main>
+    <footer></footer>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
