css changes. alignment in header

--- a/src/discover.html
+++ b/src/discover.html
@@ -8,23 +8,9 @@
     <title>Explore World</title>
   </head>
   <body>
-    <header>
-      <div id="header">
-        <h1>Discover Adventure</h1>
-        <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="product.html">Book Today</a></li>
-          <li><a href="#">Discover</a></li>
-        </ul>
-      </div>
-    </header>
-    <main>
-      <img
-        class="hero"
-        src="/src/images/lake-front.jpg"
-        alt="image of mountains and lake"
-      />
-    </main>
+    <header></header>
+    <main></main>
+    <footer></footer>
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
