accordion dynamic when button is clicked.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               aria-expanded="true"
               aria-controls="collapseOne"
             >
-              Accordion Item #1
+              Bora Bora Travel Package
             </button>
           </h2>
           <div
@@ -67,7 +67,7 @@
               aria-expanded="false"
               aria-controls="collapseTwo"
             >
-              Accordion Item #2
+              Glacier National Park Travel Package
             </button>
           </h2>
           <div
@@ -97,7 +97,7 @@
               aria-expanded="false"
               aria-controls="collapseThree"
             >
-              Accordion Item #3
+              Dubai Travel Package
             </button>
           </h2>
           <div
