--- a/src/flights.html
+++ b/src/flights.html
@@ -9,7 +9,20 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <div class="container mt-5 mb-5">
+        <table class="table table-striped" id="userTable">
+          <thead>
+            <th>Date</th>
+            <th>Departure</th>
+            <th>Scheduled Departure</th>
+            <th>Destination</th>
+            <th>Scheduled Arrival</th>
+          </thead>
+          <tbody id="tbody"></tbody>
+        </table>
+      </div>
+    </main>
     <footer></footer>
     <script type="module" src="js/main.js"></script>
   </body>
