travel survey added

--- a/src/discover.html
+++ b/src/discover.html
@@ -9,8 +9,15 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <h3>Ever wanted to travel, but don't know where?</h3>
+      <h4>
+        Take our survey today to find the perfect travel destination for you!
+      </h4>
+      <div id="app"></div>
+    </main>
     <footer></footer>
     <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/discover.js"></script>
   </body>
 </html>
