booking page form created with flights to drop down and select

--- a/index.html
+++ b/index.html
@@ -46,14 +46,21 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <strong>This is the first item’s accordion body.</strong> It is
-              shown by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It’s also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
+              <strong>
+                Experience the ultimate island getaway in Bora Bora,</strong
+              >
+              where crystal-clear turquoise lagoons meet lush volcanic
+              landscapes.This luxury travel package is designed for travelers
+              seeking relaxation, romance, and unforgettable natural beauty.
+              Stay in an iconic overwater bungalow with direct lagoon access,
+              wake up to panoramic ocean views, and enjoy world-class service
+              throughout your stay. Your days can be spent snorkeling among
+              vibrant coral reefs, swimming with tropical fish, or simply
+              relaxing on pristine white-sand beaches. In the evenings, indulge
+              in Polynesian cuisine and enjoy breathtaking sunsets over Mount
+              Otemanu. This all-inclusive package blends comfort, luxury, and
+              adventure—perfect for honeymoons, anniversaries, or anyone looking
+              to escape to one of the most beautiful destinations on Earth.
             </div>
           </div>
         </div>
@@ -76,14 +83,16 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <strong>This is the second item’s accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It’s also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
+              <strong>Discover the raw beauty of Glacier National Park,</strong>
+              where towering mountain peaks, crystal-clear alpine lakes, and
+              vast wilderness create an unforgettable outdoor escape. This
+              travel package is perfect for nature lovers, hikers, and anyone
+              looking to reconnect with the great outdoors. Spend your days
+              hiking scenic trails, spotting wildlife such as mountain goats and
+              grizzly bears, or driving the iconic Going-to-the-Sun Road for
+              panoramic views at every turn.This package combines adventure,
+              comfort, and natural wonder—ideal for solo travelers, couples, and
+              families seeking an authentic wilderness experience.
             </div>
           </div>
         </div>
@@ -106,14 +115,20 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <strong>This is the third item’s accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It’s also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
+              <strong
+                >Step into a world where modern innovation meets rich tradition
+                in Dubai,</strong
+              >
+              a dazzling destination known for its futuristic skyline, luxury
+              shopping, and unforgettable desert landscapes. This travel package
+              offers the perfect balance of excitement, culture, and relaxation.
+              Stay in a luxury hotel with sweeping views of the city or
+              coastline, and enjoy world-class amenities throughout your stay.
+              Explore iconic landmarks such as the Burj Khalifa, stroll through
+              vibrant souks, and indulge in global cuisine from street food to
+              fine dining. This package blends luxury, culture, and
+              adventure—perfect for travelers seeking a bold, unforgettable
+              escape in one of the world’s most extraordinary cities.
             </div>
           </div>
         </div>
