--- a/src/discover.html
+++ b/src/discover.html
@@ -10,10 +10,14 @@
   <body>
     <header></header>
     <main>
-      <h3>Ever wanted to travel, but don't know where?</h3>
-      <h4>
-        Take our survey today to find the perfect travel destination for you!
-      </h4>
+      <div class="discover-heading">
+        <h3 class="discover-question">
+          Ever wanted to travel, but don't know where?
+        </h3>
+        <h4 class="discover-statement">
+          Take our survey today to find the perfect travel destination for you!
+        </h4>
+      </div>
       <div id="app"></div>
     </main>
     <footer></footer>
