redirect to booking page

--- a/src/flights.html
+++ b/src/flights.html
@@ -11,13 +11,14 @@
     <header></header>
     <main class="divider">
       <div class="container">
-        <!-- <h2 class="title">Flights</h2> -->
+        <h2 class="title">Flights</h2>
 
         <select class="sortDropdown">
+          <option value="default">Default</option>
           <option value="dateAsc">Date ↑</option>
           <option value="dateDesc">Date ↓</option>
-          <option value="nameAsc">Arrival ↑</option>
-          <option value="nameDesc">Arrival ↓</option>
+          <option value="nameAsc">Arrival (A-Z)</option>
+          <option value="nameDesc">Arrival (Z-A)</option>
         </select>
       </div>
       <div class="container mt-5 mb-5">
