--- a/src/product.html
+++ b/src/product.html
@@ -11,7 +11,7 @@
     <header></header>
     <main>
       <div class="booking-container">
-        <form>
+        <form id="bookingForm">
           <label>Select location:</label>
           <select id="select"></select>
           <label>Departure Date</label>
